--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -63,8 +63,9 @@ font-0 = Hack:style=Medium:size=10:anialias=false;0
 font-1 = Hack:style=Medium:size=10:anialias=false;0
 font-2 = Hack:Style=Bold:size=10:anialias=false;0
 
-modules-left = bspwm xwindow
-modules-center = mpd
+modules-left = bspwm 
+;xwindow
+modules-center = xwindow
 modules-right = pulseaudio xkeyboard memory cpu wlan eth battery date powermenu
 
 tray-position = right
@@ -286,7 +287,8 @@ label = %date% %time%
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume = <label-volume> <bar-volume>
+format-volume = <label-volume> 
+;<bar-volume>
 label-volume = VOL %percentage%%
 label-volume-foreground = ${root.foreground}
 
