--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -65,7 +65,7 @@ font-2 = Hack:Style=Bold:size=10:anialias=false;0
 
 modules-left = bspwm 
 ;xwindow
-modules-center = xwindow
+modules-center = xwindow player
 modules-right = pulseaudio xkeyboard memory cpu wlan eth battery date powermenu
 
 tray-position = right
@@ -436,3 +436,9 @@ margin-bottom = 5
 ; vim:ft=dosini
 ;
 ;
+;
+
+[module/player]
+type=custom/script
+exec=$HOME/.config/polybar/player.sh
+interval=5
