--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -36,7 +36,58 @@ alert = ${xrdb:color15:#bd2c40}
 
 
 [bar/bspwm]
-;monitor = ${env:MONITOR:HDMI-1}
+;monitor = ${env:MONITOR:HDMI1}
+width = 100%
+height = 20
+;offset-x = 10%
+;offset-y = 1%
+radius = 1.0
+fixed-center = false
+
+background = ${colors.background}
+foreground = ${colors.foreground}
+
+line-size = 3
+line-color = #f00
+
+border-size = 4
+border-color = #00000000
+
+padding-left = 0
+padding-right = 2
+
+module-margin-left = 1
+module-margin-right = 2
+
+font-0 = Hack:style=Medium:size=10:anialias=false;0
+font-1 = Hack:style=Medium:size=10:anialias=false;0
+font-2 = Hack:Style=Bold:size=10:anialias=false;0
+
+modules-left = bspwm 
+;xwindow
+modules-center = xwindow
+modules-right = pulseaudio xkeyboard memory cpu wlan eth battery date powermenu
+
+tray-position = right
+tray-padding = 2
+;tray-background = #0063ff
+
+;wm-restack = bspwm
+;wm-restack = i3
+
+;override-redirect = true
+
+;scroll-up = bspwm-desknext
+;scroll-down = bspwm-deskprev
+
+;scroll-up = i3wm-wsnext
+;scroll-down = i3wm-wsprev
+
+cursor-click = pointer
+cursor-scroll = ns-resize
+
+[bar/bspwm2]
+monitor = ${env:MONITOR:HDMI1}
 width = 100%
 height = 20
 ;offset-x = 10%
